sass/layout/_team-sidebar.scss
.team-sidebar {
    height: 100%;
    left: 0;
    position: fixed;
    text-align: center;
    width: 65px;
    z-index: 12;

    .fa {
        @include single-transition(all, .15s, ease);
        @include opacity(.6);
        color: $white;

        &:hover {
            @include opacity(1);
        }
    }

    .team-sidebar-bottom-plugin {
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        margin-bottom: 15px;
    }

    .team-btn__content {
        @include single-transition(all, .25s, ease);
        @include opacity(.5);
        @include border-radius(3px);
        background-color: alpha-color($black, .3);
        overflow: hidden;
        height: 100%;
    }

    .team-btn {
        @include border-radius(4px);
        border: 1px solid transparent;
        font-weight: bold;
        height: 44px;
        letter-spacing: -.5px;
        line-height: 42px;
        position: relative;
        text-align: center;
        text-transform: capitalize;
        vertical-align: top;
        width: 44px;

        &:hover {
            .team-btn__content {
                @include opacity(.8);
            }
        }

        .team-btn__image {
            @include clearfix;
            @include background-size(100% 100%);
            background-color: $white;
            background-repeat: no-repeat;
            width: 43px;
            height: 100%;
        }

        &.team-btn__add {
            font-size: 25px;
            line-height: 41px;
            vertical-align: middle;
            background-color: alpha-color($black, .3);
        }
    }

    .team-wrapper {
        -webkit-overflow-scrolling: touch;
        background-color: alpha-color($black, .2);
        height: 100%;
        overflow: hidden;
        padding-top: 15px;

        .team-container {
            display: flex;
            justify-content: center;
            margin-bottom: 16px;
            position: relative;
            text-align: center;
            width: 100%;

            a {
                display: block;
                height: 100%;
                text-decoration: none;
            }

            &.active {
                .team-btn__content {
                    @include opacity(1);
                }
            }

            button {
                border: none;
                padding: 0;
                text-decoration: none;
            }

            &.active:before {
                @include border-radius(4px);
                background: $black;
                content: '';
                height: 42px;
                left: 0;
                position: absolute;
                top: 1px;
                width: 5px;
            }

            &.unread:before {
                background: $black;
                border-radius: 50%;
                content: '';
                height: 5px;
                left: 0;
                position: absolute;
                top: 18px;
                width: 5px;
            }

            a.team-disabled {
                @include opacity(.5);
                cursor: not-allowed;
            }
        }

        .team-container a:hover {
            text-decoration: none;
        }
    }
}

.multi-teams {
    .sidebar--left {
        left: 65px;
    }

    .app__content {
        margin-left: 285px;
    }
}

